--- a/css/mainscript.css
+++ b/css/mainscript.css
@@ -43,3 +43,9 @@
     color: white;
 }
 
+.header-link{
+    text-decoration: none;
+    color: black;
+    font-size: 18px;
+    font-weight: 450;
+}
